@@ -1,3 +1,4 @@
+* Remove workflow
 * Improve contextual menu:
     - Actions for all relation fields on list view
     - Use icons
